Fix uneven inputs on contact.

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -274,10 +274,8 @@ hr
   input.form-control
     height: 45px
   .form-control
-    line-height: 20px
     color: #ffffff
     border-radius: 10px
-    padding-top: 13px
     background-color: transparent
   .form-control::-webkit-input-placeholder
     color: #B3B3B3 !important
